--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
     <script>
         $(document).ready(function(){
             $('.scrollspy').scrollSpy();
+            $('.button-collapse').sideNav({
+                closeOnClick:true
+            });
         });
     </script>
 </body>
