--- a/index.html
+++ b/index.html
@@ -128,105 +128,61 @@
     <div class="container">
         <h2 class="header text_b"> Our Team </h2>
         <div class="row">
-            <div class="col s12 m3">
-                <div class="card card-avatar">
-                    <div class="waves-effect waves-block waves-light">
-                        <img class="activator" src="img/avatar1.png">
+            <div class="col s12">
+                <div class="col s4">
+                    <div class="card card-avatar">
+                        <div class="waves-effect waves-block waves-light">
+                            <img class="activator" src="img/flat_hijab.png">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Nisa Karimah <br/>
+                                <small><em><a class="red-text text-darken-1" >Konfigurasi</a></em></small></span>
+                            <p>
+                                <a class="blue-text text-lighten-2" href="https://www.instagram.com/nisakariim/?hl=en" target="_blank">
+                                    <i class="fa fa-instagram"></i>
+                                </a>
+                                <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/116167153669215189466" target="_blank">
+                                    <i class="fa fa-google-plus-square"></i>
+                                </a>
+
+                            </p>
+                        </div>
                     </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Flash <br/>
-                            <small><em><a class="red-text text-darken-1" href="#">CEO</a></em></small></span>
-                        <p>
-                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/joash.c.pereira">
-                                <i class="fa fa-facebook-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://twitter.com/im_joash">
-                                <i class="fa fa-twitter-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/+JoashPereira">
-                                <i class="fa fa-google-plus-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://www.linkedin.com/in/joashp">
-                                <i class="fa fa-linkedin-square"></i>
-                            </a>
-                        </p>
+                </div>
+
+                <div class="col s8">
+                    <div class="col s8" style="margin-top: 80px; margin-bottom: 80px;margin-left: 100px; text-align:center;">
+                        <p>Nisa Karimah, lahir di Jakarta tanggal 28 Oktober 1997. Tinggal di Bekasi. Status sebagai mahasiswa di Politeknik Negeri Jakarta, jurusan Teknik Elektro dengan prodi D3 Telekomunikasi. Pada pembuatan sistem ini Nisa berperan sebagai Konfigurasi.</p>
                     </div>
                 </div>
             </div>
-            <div class="col s12 m3">
-                <div class="card card-avatar">
-                    <div class="waves-effect waves-block waves-light">
-                        <img class="activator" src="img/avatar2.png">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Cat Woman<br/>
-                            <small><em><a class="red-text text-darken-1" href="#">Designer</a></em></small>
-                        </span>
-                        <p>
-                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/joash.c.pereira">
-                                <i class="fa fa-facebook-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://twitter.com/im_joash">
-                                <i class="fa fa-twitter-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/+JoashPereira">
-                                <i class="fa fa-google-plus-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://www.linkedin.com/in/joashp">
-                                <i class="fa fa-linkedin-square"></i>
-                            </a>
-                        </p>
+            <div class="col s12" style="margin-top:50px;">
+                <div class="col s8">
+                    <div class="col s8" style="margin-top: 80px; margin-bottom: 80px;margin-left: 100px; text-align:center;">
+                        <p>Ulfa Dwi Nurul Octa, lahir di Jakarta tanggal 11 Oktober 1996. Tinggal di Bekasi. Status sebagai mahasiswa di Politeknik Negeri Jakarta, jurusan Teknik Elektro dengan prodi D3 Telekomunikasi. Pada pembuatan sistem ini Ulfa berperan sebagai Performasi.</p>
                     </div>
                 </div>
-            </div>
-            <div class="col s12 m3">
-                <div class="card card-avatar">
-                    <div class="waves-effect waves-block waves-light">
-                        <img class="activator" src="img/avatar3.png">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">
-                            Capt. America <br/>
-                            <small><em><a class="red-text text-darken-1" href="#">CMO</a></em></small></span>
-                        <p>
-                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/joash.c.pereira">
-                                <i class="fa fa-facebook-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://twitter.com/im_joash">
-                                <i class="fa fa-twitter-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/+JoashPereira">
-                                <i class="fa fa-google-plus-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://www.linkedin.com/in/joashp">
-                                <i class="fa fa-linkedin-square"></i>
-                            </a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m3">
-                <div class="card card-avatar">
-                    <div class="waves-effect waves-block waves-light">
-                        <img class="activator" src="img/avatar4.png">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Robin<br/>
-                            <small><em><a class="red-text text-darken-1" href="#">Developer</a></em></small></span>
-                        <p>
-                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/joash.c.pereira">
-                                <i class="fa fa-facebook-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://twitter.com/im_joash">
-                                <i class="fa fa-twitter-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/+JoashPereira">
-                                <i class="fa fa-google-plus-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://www.linkedin.com/in/joashp">
-                                <i class="fa fa-linkedin-square"></i>
-                            </a>
-                        </p>
+                
+
+                <div class="col s4" >
+                    <div class="card card-avatar">
+                        <div class="waves-effect waves-block waves-light">
+                            <img class="activator" src="img/hijab4.png">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Ulfa Dwi Nurul Octa <br/>
+                                <small><em><a class="red-text text-darken-1" >Performasi</a></em></small></span>
+                            <p>
+                                <a class="blue-text text-lighten-2" href="https://www.instagram.com/ulfadwinur/?hl=en" target="_blank">
+                                    <i class="fa fa-instagram"></i>
+                                </a>
+                                <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/100413837315378606813" target="_blank">
+                                    <i class="fa fa-google-plus-square"></i>
+                                </a>
+
+                            </p>
+                        </div>
+
                     </div>
                 </div>
             </div>
