--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
                 </div>
 
                 <div class="col s8">
-                    <div class="col s8" style="margin-top: 80px; margin-bottom: 80px;margin-left: 100px; text-align:center;">
+                    <div class="col s8" style="margin-top: 80px; margin-bottom: 80px;margin-left: 100px; text-align:center;font-size: 18px;">
                         <p>Nisa Karimah, lahir di Jakarta tanggal 28 Oktober 1997. Tinggal di Bekasi. Status sebagai mahasiswa di Politeknik Negeri Jakarta, jurusan Teknik Elektro dengan prodi D3 Telekomunikasi. Pada pembuatan sistem ini Nisa berperan sebagai Konfigurasi.</p>
                     </div>
                 </div>
             </div>
             <div class="col s12" style="margin-top:50px;">
                 <div class="col s8">
-                    <div class="col s8" style="margin-top: 80px; margin-bottom: 80px;margin-left: 100px; text-align:center;">
+                    <div class="col s8" style="margin-top: 80px; margin-bottom: 80px;margin-left: 100px; text-align:center;font-size: 18px;">
                         <p>Ulfa Dwi Nurul Octa, lahir di Jakarta tanggal 11 Oktober 1996. Tinggal di Bekasi. Status sebagai mahasiswa di Politeknik Negeri Jakarta, jurusan Teknik Elektro dengan prodi D3 Telekomunikasi. Pada pembuatan sistem ini Ulfa berperan sebagai Performasi.</p>
                     </div>
                 </div>
