--- a/index.html
+++ b/index.html
@@ -77,13 +77,14 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Frozen</span>
-                        <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                        <p>Frozen adalah film animasi garapan Walt Disney Pictures yang rilis pada tahun 2013. Tak lama setelah dirilis, film ini menjadi begitu populer di berbagai kalangan masyarakat, khususnya anak-anak.</p>
                         <p><a href="#">View video</a></p>
                     
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Frozen <i class="mdi-navigation-close right"></i></span>
-                        <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                        <p>Frozen adalah film animasi garapan Walt Disney Pictures yang rilis pada tahun 2013. Tak lama setelah dirilis, film ini menjadi begitu populer di berbagai kalangan masyarakat, khususnya anak-anak.</p><br>
+                        <p>Seperti yang kita ketahui, banyak karya Walt Disney Pictures yang merupakan adaptasi dari dongeng yang sudah pernah ada sebelumnya. Tahukah kamu bahwa Frozen juga diadaptasi dari dongeng berjudul The Snow Queen?</p>
                     </div>
                 </div>
             </div>
@@ -94,12 +95,13 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">PK</span>
-                        <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                        <p>PK adalah film drama komedi satir India tahun 2014. Film ini disutradarai oleh Rajkumar Hirani, diproduksi oleh Hirani dan Vidhu Vinod Chopra, dan ditulis oleh Hirani dan Abhijat Joshi.</p>
                         <p><a href="#">View video</a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">PK<i class="mdi-navigation-close right"></i></span>
-                        <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                        <p>PK adalah film drama komedi satir India tahun 2014. Film ini disutradarai oleh Rajkumar Hirani, diproduksi oleh Hirani dan Vidhu Vinod Chopra, dan ditulis oleh Hirani dan Abhijat Joshi.</p><br>
+                        <p>Film ini dibintangi Aamir Khan dan Anushka Sharma, dengan Sushant Singh Rajput, Boman Irani, Saurabh Shukladan Sanjay Dutt dalam mendukung peran. Ini bercerita tentang alien yang datang ke bumi pada misi penelitian. Dia berteman dengan seorang wartawan televisi dan pertanyaan dogma agama dan takhayul</p>
                         
                     </div>
                 </div>
@@ -111,11 +113,13 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Angry Bird <i class="mdi-navigation-more-vert right"></i></span>
+                        <p>Film "The Angry Birds Movie" menceritakan tentang kehidupan sekelompok burung yang hidup di sebuah pulau, mereka yaitu Red (Jason Sudeikis), Chuck (Josh Gad) dan Bom (Danny McBride). Akan tetapi ada salah satu ekor burung yang mempunyai masalah dengan emosinya, burung tersebut yaitu Red.</p>
                         <p><a href="#">View video</a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Angry Bird <i class="mdi-navigation-close right"></i></span>
-                        <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                        <p>Film "The Angry Birds Movie" menceritakan tentang kehidupan sekelompok burung yang hidup di sebuah pulau, mereka yaitu Red (Jason Sudeikis), Chuck (Josh Gad) dan Bom (Danny McBride). Akan tetapi ada salah satu ekor burung yang mempunyai masalah dengan emosinya, burung tersebut yaitu Red.</p><br>
+                        <p>Suatu hari ada sebuah kapal yang membawa segrombolan babi yang di pimpin oleh Leonard. Dengan kedatangan Leonard dan kawan kawannya tersebut membuat kehidupan Red bersama teman temannya mulai terusik, karena sekelompok babi tersebut sering mencuri telur-telur mereka. .Penasaran? Silahkan lihat video nya</p>
                     </div>
                 </div>
             </div>
