--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div  class="col s12">
                 <img style="width:400px; height:300px; display:block; margin-left:auto; margin-right:auto;" src="img/iptv.jpg">
-                <p class="light center">Internet Protocol Television (IPTV) adalah layanan multimedia seperti televisi, video, audio, dan grafis yang ditransmisikan melalui jaringan berbasis Internet Protocol (IP) yang dikelola untuk memberikan jaminan tingkat kualitas dalam hal layanan, keamanan, interaktivitas, dan kehandalan. Nilai tambah dari layanan IPTV ini adalah layanan internet seperti video streaming, akses web, dan layanan telefon seperti Voice over Internet Protocol (VoIP) (ITU-T Focus Group IPTV, 2006).</p>
+                <p class="center">Internet Protocol Television (IPTV) adalah layanan multimedia seperti televisi, video, audio, dan grafis yang ditransmisikan melalui jaringan berbasis Internet Protocol (IP) yang dikelola untuk memberikan jaminan tingkat kualitas dalam hal layanan, keamanan, interaktivitas, dan kehandalan. Nilai tambah dari layanan IPTV ini adalah layanan internet seperti video streaming, akses web, dan layanan telefon seperti Voice over Internet Protocol (VoIP) (ITU-T Focus Group IPTV, 2006).</p>
             </div>
             
                     
