--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <img class="activator" src="img/2.jpeg" style="padding: 5px;">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Angry Bird <i class="mdi-navigation-more-vert right"></i></span>
+                        <span class="card-title activator grey-text text-darken-4">Angry Bird</span>
                         <p>Film "The Angry Birds Movie" menceritakan tentang kehidupan sekelompok burung yang hidup di sebuah pulau, mereka yaitu Red (Jason Sudeikis), Chuck (Josh Gad) dan Bom (Danny McBride). Akan tetapi ada salah satu ekor burung yang mempunyai masalah dengan emosinya, burung tersebut yaitu Red.</p>
                         <p><a href="#">View video</a></p>
                     </div>
