--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="col s12 m4 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="img/3.jpeg" style="padding: 5px;">
+                        <img class="activator" src="img/3.jpg" style="padding: 5px;">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">PK</span>
