--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
                         <img class="activator" src="img/3.jpg" style="padding: 5px;">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">PK</span>
-                        <p>PK adalah film drama komedi satir India tahun 2014. Film ini disutradarai oleh Rajkumar Hirani, diproduksi oleh Hirani dan Vidhu Vinod Chopra, dan ditulis oleh Hirani dan Abhijat Joshi.</p>
+                        <span class="card-title activator grey-text text-darken-4">Crayon Shinchan</span>
+                        <p>Crayon Shinchan adalah serial dan karya. Tokoh utamanya adalah seorang bocah berusia lima tahun, ia murid yang sering membuat ulah, dan membuat repot semua orang disekitarnya. Crayon Shin-chan pertama muncul secara mingguan di majalah.</p>
                         <p><a href="#">View video</a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">PK<i class="mdi-navigation-close right"></i></span>
-                        <p>PK adalah film drama komedi satir India tahun 2014. Film ini disutradarai oleh Rajkumar Hirani, diproduksi oleh Hirani dan Vidhu Vinod Chopra, dan ditulis oleh Hirani dan Abhijat Joshi.</p><br>
-                        <p>Film ini dibintangi Aamir Khan dan Anushka Sharma, dengan Sushant Singh Rajput, Boman Irani, Saurabh Shukladan Sanjay Dutt dalam mendukung peran. Ini bercerita tentang alien yang datang ke bumi pada misi penelitian. Dia berteman dengan seorang wartawan televisi dan pertanyaan dogma agama dan takhayul</p>
+                        <p>Crayon Shinchan adalah serial dan karya. Tokoh utamanya adalah seorang bocah berusia lima tahun, ia murid yang sering membuat ulah, dan membuat repot semua orang disekitarnya. Crayon Shin-chan pertama muncul secara mingguan di majalah.</p><br>
+                        <p>Di Indonesia, serial ini pertama kali ditayangkan di RCTI setiap hari Minggu pukul 07.30 WIB. Dan kini sudah tidak disiarkan lagi di Indonesia. Humor dalam seri ini berasal dari tingkah laku Shin-chan yang janggal. Misalnya ia sering meledek ibunya bila disuruh merapikan mainannya. Seperti ayahnya, Shin-chan juga suka melihat wanita cantik dan sering merayu mereka.</p>
                         
                     </div>
                 </div>
