--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Frozen</span>
                         <p>Frozen adalah film animasi garapan Walt Disney Pictures yang rilis pada tahun 2013. Tak lama setelah dirilis, film ini menjadi begitu populer di berbagai kalangan masyarakat, khususnya anak-anak.</p>
-                        <p><a href="#">View video</a></p>
+                        <p><a href="video-frozen.html">View video</a></p>
                     
                     </div>
                     <div class="card-reveal">
@@ -96,7 +96,7 @@
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Crayon Shinchan</span>
                         <p>Crayon Shinchan adalah serial dan karya. Tokoh utamanya adalah seorang bocah berusia lima tahun, ia murid yang sering membuat ulah, dan membuat repot semua orang disekitarnya. Crayon Shin-chan pertama muncul secara mingguan di majalah.</p>
-                        <p><a href="#">View video</a></p>
+                        <p><a href="video-sinchan.html">View video</a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">PK<i class="mdi-navigation-close right"></i></span>
@@ -114,7 +114,7 @@
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Angry Bird</span>
                         <p>Film "The Angry Birds Movie" menceritakan tentang kehidupan sekelompok burung yang hidup di sebuah pulau, mereka yaitu Red (Jason Sudeikis), Chuck (Josh Gad) dan Bom (Danny McBride). Akan tetapi ada salah satu ekor burung yang mempunyai masalah dengan emosinya, burung tersebut yaitu Red.</p>
-                        <p><a href="#">View video</a></p>
+                        <p><a href="video-angry.html">View video</a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Angry Bird <i class="mdi-navigation-close right"></i></span>
