--- a/video-angry.html
+++ b/video-angry.html
@@ -18,19 +18,6 @@
         <div class="container">
             <div class="nav-wrapper">
             <a href="index.html" id="logo-container" class="brand-logo center">IPTV</a>
-<!--                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#vod">Video On Demand</a></li>
-                    <li><a href="#team">About Us</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul> -->
-<!--                 <ul id="nav-mobile" class="side-nav">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#vod">Video On Demand</a></li>
-                    <li><a href="#team">About Us</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul> -->
-            <!-- <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a> -->
             </div>
         </div>
     </nav>
@@ -39,14 +26,8 @@
 <!--Home-->
 <div id="home" class="section scrollspy">
     <div class="container">
-        <video autobuffer autoloop loop controls width="100%">
+        <video autoplay autoloop loop controls width="100%">
             <source src="video/angry-birds.mp4" type="video/mp4">
-            <!-- <object type="video/mp4" data="video/shinchan.mp4">
-            <param name="src" value="video/shinchan.mp4">
-            <param name="autoplay" value="false">
-            <param name="autoStart" value="0">
-            <p><a href="video/shinchan.mp4">Download this video file.</a></p>
-            </object> -->
         </video>
     </div>
 </div>
@@ -55,7 +36,7 @@
 <footer id="contact" class="page-footer default_color scrollspy">
     <div class="footer-copyright default_color">
         <div class="container">
-            © 2018 IPTV | All Rights Reserved | Made by <a class="white-text" href="#!">HERteam</a>.
+            © 2018 IPTV | All Rights Reserved | Made by <a class="white-text" href="#!">Nisa & Ulfa</a>.
         </div>
     </div>
 </footer>
